src/snapshots/afrotd__parser__tests__interpretation_5.2.7_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 7
index: 4
text: "3. und 4 von der 50-Meterlinie. Nachdem der Ball spielbereit\nist und vor dem Snap bewegt sich B60 durch die neutrale Zone und\nberührt dort Snapper A50. A61 foult danach B60. A61’s Foul war ein\npersönliches Foul."
ruling: "Team B wird mit 5 Metern für das Offside\nbestraft. Danach wird Team A mit 15 Metern bestraft. Die Kette und der\nDownanzeiger werden verschoben; Team A’s Ball, 1. und 10 von der\nA-40."
