src/snapshots/afrotd__parser__tests__interpretation_5.2.7_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 7
index: 5
text: "Nach der Erzielung eines First Downs durch Team A hat der\nUmpire den Ball an der B-30 auf dem Boden platziert. Der Referee\nzeigt dem Umpire an, dass sich dieser in seine Position bewegen kann,\nund bevor er den Ball freigeben kann, snappt A55 den Ball."
ruling: "Dead Ball Foul Team A, Spielverzögerung. 5-Meterstrafe, 1. und 10 von\nder B-35. Beachte: Das ist ein Foul zwischen den Serien, da es sich\nereignet, bevor der Ball für die nächste Serie freigegeben wurde. Daher\nist es ein 1. und 10, kein 1. und 15 (Regeln 4.1.1, 4.1.4)."
