src/snapshots/afrotd__parser__tests__interpretation_6.1.10_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 10
index: 1
text: "Free Kick von der A-35. Der Kick ist hoch und weit und fliegt\nin Richtung des Pylons, wo B22 sich in Position befindet, den Ball zu\nfangen. Während des Kicks formieren B56 und B44 an der B-40 eine\nWedge. Der Ball (a) trifft B22 an der B-3 am Gesichtsgitter, prallt nach\nvorne und geht an der B-10 ins Seitenaus; (b) kommt an der B-3 auf\ndem Boden auf und rollt an der B-2 unberührt ins Seitenaus."
ruling: "(a) Foul für eine illegale Wedge-Formation, Team B’s 1. und 10 an der\nB-5; (b) Foul für den Free Kick ins Aus, aber kein Foul für eine illegale\nWedge-Formation."
