src/snapshots/afrotd__parser__tests__interpretation_6.1.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 2
index: 2
text: "Kicker A11 stellt den Ball auf einem Tee in der Mitte des Feldes\nzu einem Free Kick auf, wobei sich vier seiner Mitspieler auf der linken Seite des Balles und sechs auf der rechten Seite aufstellen. Der\nBall wird vom Tee heruntergeweht und A55, der sich vorher auf der linken Seite aufgestellt hatte, hält den Ball auf dem Tee für den mit dem\nrechten Fuß kickenden A11 fest. Keiner der anderen Team A-Spieler\nverändert seine Position. Als der Ball durch A11 gekickt wird, befindet\nsich A55 auf der rechten Seite des Kickers."
ruling: "Foul von Team\nA wegen einer illegalen Formation beim Kick. Strafe – 5 Meter vom Previous Spot und Wiederholung des Kicks oder 5 Meter von dem Punkt,\nan dem der Dead Ball zu Team B gehört."
