src/snapshots/afrotd__parser__tests__interpretation_6.1.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 2
index: 3
text: "Der Free Kicker A11 stellt den Ball auf ein Tee direkt an der\nrechten Hash Mark. Alle anderen Mitspieler stellen sich zu seiner Linken auf. Bei der Ballfreigabe laufen vier Team A-Spieler, die sich auf\nA11’s linker Seite befanden, auf die rechte Seite und befinden sich in\nder Zone auf A11’s rechter Seite, als A11 den Ball kickte."
ruling: Legale Formation.
