src/snapshots/afrotd__parser__tests__interpretation_6.1.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 2
index: 5
text: "Team A begeht ein Offside während des Free Kicks. B27 recovert den Kick, während er sich mit einem Knie auf dem Boden befindet."
ruling: "Foul von Team A für Offside. Der Ball wird dead am\nPunkt der Recovery. Strafe: Team B kann 5 Meter vom Previous Spot\nmit neuem Free Kick oder 5 Meter vom Dead Ball Spot mit eigenem\nersten Down und 10 wählen. Die Recovery von B27 startet ein Laufspiel, welches sofort endet. Gleiches gilt, wenn B27 einen Fair Catch\nvervollständigt."
