src/snapshots/afrotd__parser__tests__interpretation_6.1.2_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 2
index: 7
text: "Team A befindet sich in einer Kickoff Formation an der A-35.\nZwei Spieler, A33 und A66, stehen in einem Vierpunktstand. Dabei befinden sich ihre Füße an der A-29 und ihre Hände an der A-31. Der\nunberührte Kick prallt in B’s Endzone auf den Boden und wird für dead\nerklärt."
ruling: "Touchback. Team A-Foul, illegale Formation. Weder\nA33 noch A66 hatten wenigstens einen Fuß an der A-30. Team B hat\nzwei Möglichkeiten, die Strafe anzunehmen. Es kann den Ball nach einer 5-Meterstrafe von der B-25 (dem Punkt, an dem ihm der Dead Ball\ngehört) an der B-30 ins Spiel bringen oder Team A von der A-30 noch\neinmal kicken lassen (Regel 6.1.8)."
